--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,8 @@
 <!--
     Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
 
-    Licensed to the Apache Software Foundation (ASF) under one
+"q" non Š riconosciuto come comando interno o esterno,
+ un programma eseguibile o un file batch.
     or more contributor license agreements.  See the NOTICE file
     distributed with this work for additional information
     regarding copyright ownership.  The ASF licenses this file
@@ -34,7 +35,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">HELLO BABY</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
